# Tigraf-Core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindD3D11.cmake  FindD3D12.cmake  FindMetal.cmake  FindPkgMacros.cmake  Tigraf_Packages.cmake  Tigraf_Utils.cmake  Utils.cmake
debug_console/resources/shaders/: GridShader.glsl
debug_console/src/: Tigraf-ConsoleApp.cpp
debug_console/src/Layers/: AppLayer.cpp
example_app/src/Layers/: AppLayer.cpp
include/: Tigraf.h
include/Tigraf/: Tigraf.h
include/Tigraf/Core/: Application.h  Assert.h  Core.h  Layer.h  Log.h  PlatformDetection.h  Timer.h
include/Tigraf/Event/: Event.h
include/Tigraf/Input/: glfwInput.h  sdlInput.h  sdlKeycodes.h
include/Tigraf/Renderer/: Renderer.h  RendererAPI.h
include/Tigraf/Renderer/Buffers/: Buffer.h  UniformBufferDefines.h
include/Tigraf/Renderer/Camera/: Camera.h  EditorCamera.h
include/Tigraf/Renderer/Framebuffers/: Framebuffer.h
include/Tigraf/Renderer/Mesh/: Mesh.h  MeshPrimitives.h
include/Tigraf/Renderer/Shaders/: Shader.h
include/Tigraf/Renderer/Textures/: Texture.h  TextureDefines.h
include/Tigraf/Window/: Window.h
src/: PCH.h
src/Tigraf/Core/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Timer.cpp
src/Tigraf/GUI/: Frame.cpp  GUI_Element.cpp
src/Tigraf/Input/: glfwInput.cpp  sdlInput.cpp
src/Tigraf/Renderer/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  Renderer.cpp  Renderer.h  RendererAPI.h
src/Tigraf/Renderer/Buffers/: Buffer.cpp  Buffer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  UniformBufferDefines.h
src/Tigraf/Renderer/Camera/: Camera.cpp  EditorCamera.cpp
src/Tigraf/Renderer/Framebuffers/: Framebuffer.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h
src/Tigraf/Renderer/Mesh/: Mesh.cpp  MeshPrimitives.cpp
src/Tigraf/Renderer/Shaders/: ComputeShader.cpp  Shader.cpp  glslComputeShader.cpp  glslShader.cpp  glslShader.h
src/Tigraf/Renderer/Textures/: OpenGLTexture.cpp  OpenGLTexture.h  Texture.cpp
src/Tigraf/Window/: Window.cpp  glfwWindow.cpp  glfwWindow.h  sdlWindow.cpp  sdlWindow.h
